fix: margin causing page stretch, current page staying at last known position

--- a/star-wars-browser/src/components/search_results_modal/_searchresultsmodal.scss
+++ b/star-wars-browser/src/components/search_results_modal/_searchresultsmodal.scss
@@ -1,6 +1,6 @@
 .page-changing__container{
     display: flex;
     position: absolute;
-    bottom: 0;
+    bottom: $margin-base;
     left: 0;
 }
